--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -49,7 +49,7 @@
     font-size: 160px;
     padding: 0 30px;
     line-height: 120px;
-    color: rgba(169,3,41, 0.8);
+    color: rgba(255, 255, 255, 0.8);
 }
 .cb-slideshow li:nth-child(1) span { background-image: url(../images/6.jpg) }
 .cb-slideshow li:nth-child(2) span {
@@ -127,7 +127,7 @@
     -ms-animation-delay: 30s;
     animation-delay: 30s;
 }
-@-webkit-keyframes imageAnimation { 
+@-webkit-keyframes imageAnimation {
 	0% {
 	    opacity: 0;
 	    -webkit-animation-timing-function: ease-in;
@@ -147,7 +147,7 @@
 	}
 	100% { opacity: 0 }
 }
-@-moz-keyframes imageAnimation { 
+@-moz-keyframes imageAnimation {
 	0% {
 	    opacity: 0;
 	    -moz-animation-timing-function: ease-in;
@@ -167,7 +167,7 @@
 	}
 	100% { opacity: 0 }
 }
-@-o-keyframes imageAnimation { 
+@-o-keyframes imageAnimation {
 	0% {
 	    opacity: 0;
 	    -o-animation-timing-function: ease-in;
@@ -187,7 +187,7 @@
 	}
 	100% { opacity: 0 }
 }
-@-ms-keyframes imageAnimation { 
+@-ms-keyframes imageAnimation {
 	0% {
 	    opacity: 0;
 	    -ms-animation-timing-function: ease-in;
@@ -207,7 +207,7 @@
 	}
 	100% { opacity: 0 }
 }
-@keyframes imageAnimation { 
+@keyframes imageAnimation {
 	0% {
 	    opacity: 0;
 	    animation-timing-function: ease-in;
@@ -227,7 +227,7 @@
 	}
 	100% { opacity: 0 }
 }
-@-webkit-keyframes titleAnimation { 
+@-webkit-keyframes titleAnimation {
 	0% {
 	    opacity: 0;
 	    -webkit-transform: translateX(200px);
@@ -247,7 +247,7 @@
 	25% { opacity: 0 }
 	100% { opacity: 0 }
 }
-@-moz-keyframes titleAnimation { 
+@-moz-keyframes titleAnimation {
 	0% {
 	    opacity: 0;
 	    -moz-transform: translateX(200px);
@@ -267,7 +267,7 @@
 	25% { opacity: 0 }
 	100% { opacity: 0 }
 }
-@-o-keyframes titleAnimation { 
+@-o-keyframes titleAnimation {
 	0% {
 	    opacity: 0;
 	    -o-transform: translateX(200px);
@@ -287,7 +287,7 @@
 	25% { opacity: 0 }
 	100% { opacity: 0 }
 }
-@-ms-keyframes titleAnimation { 
+@-ms-keyframes titleAnimation {
 	0% {
 	    opacity: 0;
 	    -ms-transform: translateX(200px);
@@ -307,7 +307,7 @@
 	25% { opacity: 0 }
 	100% { opacity: 0 }
 }
-@keyframes titleAnimation { 
+@keyframes titleAnimation {
 	0% {
 	    opacity: 0;
 	    transform: translateX(200px);
@@ -331,9 +331,9 @@
 .no-cssanimations .cb-slideshow li span{
 	opacity: 1;
 }
-@media screen and (max-width: 1140px) { 
+@media screen and (max-width: 1140px) {
 	.cb-slideshow li div h3 { font-size: 100px }
 }
-@media screen and (max-width: 600px) { 
+@media screen and (max-width: 600px) {
 	.cb-slideshow li div h3 { font-size: 50px }
 }
