--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -345,7 +345,7 @@ html, body {
     background:#CCC;
     height:50px;
 }
-#bkgHolder {
+/*#bkgHolder {
     background-image: url('http://www.hdwallpapers.in/walls/abstract_color_background_picture_8016-wide.jpg');
     background-repeat: no-repeat;
     background-position: center top;
@@ -354,6 +354,95 @@ html, body {
     height:100%;
     position:absolute;
     z-index:-10;
+}*/
+
+// vars and keyframes
+$delay: .5s;
+$menu-items: 3;
+
+@keyframes drop {
+  from {
+    top: 0px;
+  }
+  70% {
+    top: 165px;
+    animation-timing-function: ease-in;
+  }
+  to {
+    top: 150px;
+    animation-timing-function: ease-out;
+  }
+}
+.mwrapper {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  margin: 10px auto;
+}
+
+.button {
+  display: flex;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: #2E3F47;
+  z-index: 2;
+}
+
+.button__line {
+  background: #ccc;
+  width: 90px;
+  height: 15px;
+
+  &:not(:first-child) {
+    margin-top: 15px;
+  }
+}
+
+.menu {
+  width: 100%;
+}
+
+.menu__list {
+  text-align: center;
+  width: 100%;
+  padding-left: 0;
+}
+
+.menu__list__item {
+  position: relative;
+  list-style: none;
+  padding-bottom: 15px;
+  top: 0px;
+}
+
+.menu__list__item a {
+  text-decoration: none;
+  color: grey;
+  text-align: center;
+  font-size: 1.5em;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.menu__list__item {
+  opacity: 0;
+}
+
+.menu__list--animate .menu__list__item {
+  animation: drop 0.9s;
+  animation-fill-mode: forwards;
+  opacity: 1;
+
+  @for $i from 2 through $menu-items {
+    &:nth-child(#{$i}) {
+      animation-delay: $delay * ($i - 1);
+    }
+  }
 }
 .wrapper {
   min-height: 100%;
